fix(web-components): fix alignment of text fields in data entity, update storybook examples
Added negative margin to slotted text fields (when labels are hidden) to vertically align with data
row labels. Updated data entity stories to be consistent with examples used in guidance site (as is
generally the case with other components).

mi6/ic-design-system#128

--- a/packages/web-components/src/components/ic-data-row/ic-data-row.css
+++ b/packages/web-components/src/components/ic-data-row/ic-data-row.css
@@ -27,6 +27,18 @@
   flex-grow: 1;
 }
 
+slot[name="value"]::slotted(ic-text-field[readonly][hide-label]) {
+  margin-top: calc(var(--ic-space-xs) * -1);
+}
+
+slot[name="value"]::slotted(ic-text-field[small][readonly][hide-label]) {
+  margin-top: calc(var(--ic-space-xxs) * -1);
+}
+
+slot[name="value"]::slotted(ic-text-field[readonly][hide-label][rows]) {
+  margin-top: calc(var(--ic-space-xxs) * -1 - var(--ic-space-xxxs));
+}
+
 .end-component {
   width: fit-content;
   margin-left: 56px;
